# nftables-1.0.2-with-fullcone

./: INSTALL  Make_global.am  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  data-types.txt  libnftables-json.adoc  libnftables.adoc  nft.txt  payload-expression.txt  primary-expression.txt  stateful-objects.txt  statements.txt
examples/: Makefile.am  Makefile.in
files/: Makefile  Makefile.am  Makefile.in
files/examples/: Makefile  Makefile.am  Makefile.in
files/nftables/: Makefile  Makefile.am  Makefile.in
files/osf/: Makefile  Makefile.am  Makefile.in
include/: Makefile.am  Makefile.in  cache.h  cli.h  cmd.h  ct.h  datatype.h  expression.h  exthdr.h  fib.h  gmputil.h  headers.h  json.h  list.h  meta.h  mnl.h  netlink.h  nftables.h  parser.h  payload.h  proto.h  rule.h  statement.h  utils.h
include/linux/: Makefile.in
include/linux/netfilter/: Makefile.am  Makefile.in  nf_tables.h
include/linux/netfilter_arp/: Makefile.in
include/linux/netfilter_bridge/: Makefile.in
include/linux/netfilter_ipv4/: Makefile.in
include/linux/netfilter_ipv6/: Makefile.in
include/nftables/: Makefile.am  Makefile.in  libnftables.h
py/: Makefile.am  Makefile.in  setup.py
src/: Makefile.am  Makefile.in  cache.c  cli.c  cmd.c  ct.c  datatype.c  erec.c  evaluate.c  expression.c  exthdr.c  fib.c  gmputil.c  hash.c  iface.c  ipopt.c  json.c  libnftables.c  libnftables.map  main.c  mergesort.c  meta.c  misspell.c  mnl.c  monitor.c  netlink.c  netlink_delinearize.c  netlink_linearize.c  nfnl_osf.c  numgen.c  optimize.c  osf.c  owner.c  parser_bison.c  parser_bison.h  parser_bison.y  parser_json.c  payload.c  print.c  proto.c  (+12 more)
tests/monitor/: run-tests.sh
tests/monitor/testcases/: object.t  set-interval.t  set-simple.t  simple.t
tests/py/: README  nft-test.py
tests/py/any/: ct.t  ct.t.payload  limit.t  limit.t.json  limit.t.json.output  limit.t.payload  log.t.json.output  meta.t  meta.t.json  meta.t.json.output  meta.t.payload  queue.t  queue.t.json.output  rawpayload.t  rawpayload.t.json  rawpayload.t.payload  tcpopt.t  tcpopt.t.json  tcpopt.t.payload
tests/py/arp/: arp.t.payload  arp.t.payload.netdev
tests/py/bridge/: meta.t  vlan.t  vlan.t.json  vlan.t.json.output  vlan.t.payload  vlan.t.payload.netdev
tests/py/inet/: ah.t.payload  comp.t.payload  ct.t  ct.t.payload  dccp.t.payload  esp.t.payload  ether.t  ether.t.json  ether.t.payload.bridge  ether.t.payload.ip  fib.t.json  fib.t.json.output  fib.t.payload  ipsec.t  ipsec.t.json  ipsec.t.payload  meta.t  meta.t.json.output  meta.t.payload  sctp.t.payload  synproxy.t.json  tcp.t  tcp.t.json.output  tcp.t.payload  tproxy.t  tproxy.t.payload  udp.t.payload  udplite.t.payload
tests/py/ip/: ct.t  ct.t.payload  dnat.t  dnat.t.payload.ip  flowtable.t  flowtable.t.payload  icmp.t  icmp.t.json.output  icmp.t.payload.ip  igmp.t.payload  ip.t  ip.t.json.output  ip.t.payload  ip.t.payload.bridge  ip.t.payload.inet  ip.t.payload.netdev  masquerade.t.json.output  masquerade.t.payload  meta.t  meta.t.payload  numgen.t.payload  redirect.t  redirect.t.json.output  redirect.t.payload  sets.t  sets.t.payload.inet  sets.t.payload.ip  sets.t.payload.netdev  snat.t.json.output  snat.t.payload
tests/py/ip6/: dnat.t.payload.ip6  dst.t.payload.inet  dst.t.payload.ip6  exthdr.t.json.output  flowtable.t  flowtable.t.payload  frag.t.payload.inet  frag.t.payload.ip6  frag.t.payload.netdev  hbh.t.payload.inet  hbh.t.payload.ip6  icmpv6.t  icmpv6.t.json.output  icmpv6.t.payload.ip6  ip6.t  ip6.t.payload.inet  ip6.t.payload.ip6  masquerade.t.json.output  masquerade.t.payload.ip6  meta.t  meta.t.payload  mh.t.payload.inet  mh.t.payload.ip6  redirect.t  redirect.t.json.output  redirect.t.payload.ip6  rt.t.payload.inet  rt.t.payload.ip6  sets.t  sets.t.payload.inet  sets.t.payload.ip6  sets.t.payload.netdev  snat.t.payload.ip6  srh.t.payload
tests/shell/: run-tests.sh
tests/shell/testcases/cache/: 0008_delete_by_handle_0  0009_delete_by_handle_incorrect_0  0010_implicit_chain_0
tests/shell/testcases/chains/: 0003jump_loop_1  0010endless_jump_loop_1  0011endless_jump_loop_1  0014rename_0  0018check_jump_loop_1  0021prio_0  0023prio_inet_srcnat_1  0024prio_inet_dstnat_1  0040mark_shift_0  0040mark_shift_1  0041chain_binding_0  0042chain_variable_0  0043chain_ingress_0
tests/shell/testcases/chains/dumps/: 0040mark_shift_0.nft  0040mark_shift_1.nft  0042chain_variable_0.nft  0043chain_ingress.nft
tests/shell/testcases/flowtable/: 0012flowtable_variable_0  0013addafterdelete_0  0014addafterdelete_0
tests/shell/testcases/listing/: 0013objects_0  0020flowtable_0  0021ruleset_json_terse_0
tests/shell/testcases/maps/: 0003map_add_many_elements_0  0004interval_map_create_once_0  0008interval_map_delete_0  0009vmap_0  0010concat_map_0  0011vmap_0  0013map_0  nat_addr_port  typeof_maps_0
tests/shell/testcases/nft-f/: 0017ct_timeout_obj_0  0018ct_expectation_obj_0  0021list_ruleset_0  0025empty_dynset_0
tests/shell/testcases/optimizations/: merge_stmts  merge_stmts_concat  merge_stmts_concat_vmap  merge_stmts_vmap  merge_vmaps  single_anon_set
tests/shell/testcases/optionals/: comments_chain_0  comments_objects_0  comments_table_0  update_object_handles_0
tests/shell/testcases/rule_management/: 0003insert_0  0004replace_0  0010replace_0
tests/shell/testcases/sets/: 0012add_delete_many_elements_0  0013add_delete_many_elements_0  0022type_selective_flush_0  0024named_objects_0  0029named_ifname_dtype_0  0030add_many_elements_interval_0  0034get_element_0  0036add_set_element_expiration_0  0038meter_list_0  0043concatenated_ranges_0  0043concatenated_ranges_1  0044interval_overlap_0  0044interval_overlap_1  0046netmap_0  0047nat_0  0048set_counters_0  0049set_define_0  0051set_interval_counter_0  0059set_update_multistmt_0  0060set_multistmt_0  0062set_connlimit_0  0063set_catchall_0  0064map_catchall_0  0067nat_concat_interval_0  0068interval_stack_overflow_0  typeof_sets_0
tests/shell/testcases/transactions/: 0023rule_1  0024rule_0  0049huge_0  0050rule_1
(+32 files in other folders)
