SUBDIRS =		linux		\
			nftables

noinst_HEADERS = 	cli.h		\
			cache.h		\
			cmd.h		\
			datatype.h	\
			expression.h	\
			fib.h		\
			hash.h		\
			ipopt.h		\
			json.h		\
			mini-gmp.h	\
			gmputil.h	\
			iface.h		\
			mnl.h		\
			nftables.h	\
			payload.h	\
			rbtree.h	\
			tcpopt.h	\
			statement.h	\
			ct.h		\
			erec.h		\
			exthdr.h	\
			headers.h	\
			list.h		\
			meta.h		\
			misspell.h	\
			numgen.h	\
			netlink.h	\
			osf.h		\
			owner.h		\
			parser.h	\
			proto.h		\
			sctp_chunk.h	\
			socket.h	\
			rule.h		\
			rt.h		\
			utils.h		\
			xfrm.h		\
			xt.h
